fix(security): make CORS allowed origins configurable via environment property